<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/black"
            android:contentDescription="@string/back_button">
        </ImageButton>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/doctorProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/ic_avatar_profile_hd">

        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/doctorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/doctor_name"
            android:textColor="@color/black">
        </TextView>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_gravity="end"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_baseline_call_24"
            android:contentDescription="@string/phone">
        </ImageButton>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginEnd="18dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_baseline_videocam_24"
            android:contentDescription="@string/phone_call">
        </ImageButton>

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/blue_secondary"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_shadow"
            android:hint="Say something..."
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="4dp"
            android:paddingEnd="20dp"
            android:src="@drawable/ic_baseline_camera_alt_24"
            app:tint="@color/blue_primary">

        </ImageView>

        <ImageView
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            app:tint="@color/blue_primary"
            android:src="@drawable/ic_baseline_send_24" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messageRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_below="@+id/toolbar"
        android:background="@android:color/white"
        tools:listitem="@layout/item_message_2" />
</RelativeLayout>