<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="8dp"
    card_view:cardCornerRadius="28dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="8dp"

        android:layout_marginStart="4dp"
        android:padding="8dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_more"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.021">

        </ImageView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="22dp"
            card_view:cardElevation="0dp"

            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="71dp"
                android:background="@color/blue_white"
                android:layout_height="95dp">



                <TextView
                    android:id="@+id/tanggal_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/_12"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent">

                </TextView>

                <TextView
                    android:id="@+id/hari_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:layout_marginEnd="9dp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/tue"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/tanggal_report"
                    card_view:layout_constraintVertical_bias="0.0">

                </TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/waktu_report"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/_07_30_am"
            android:textColor="@color/gray"
            android:textSize="14sp"
            card_view:layout_constraintEnd_toEndOf="parent"

            card_view:layout_constraintStart_toStartOf="@+id/title_report"
            card_view:layout_constraintTop_toBottomOf="@id/title_report" />

        <TextView
            android:id="@+id/title_report"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/nunito_bold"
            android:text="hjjhjh"
            android:textAlignment="textStart"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/cardView"
            card_view:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>